structure finished. css to finish

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
   </head>
 
   <body>
+    <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn.pixabay.com/photo/2016/01/19/15/07/cocktails-1149171_1280.jpg);">
+      <div class="container">
+        <h1>Super Mega chouettes <strong>cocktails</strong>!</h1>
+        <p>L'abus d'alcoooooool est dangereux pour ton porte-monnaie</p>
+      </div>
+    </div>
+
     <%= yield %>
   <%#= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag "application" %> <!-- from app/assets/javascripts/application.js -->
