--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,3 +4,7 @@
 @import "navbar";
 @import "banner";
 @import "button";
+@import "add_ingredients";
+@import "cocktail_infos";
+@import "card_index";
+@import "footer";
