--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
-  <h1>Create a new Cocktail</h1>
+  <h1>Ajoute ton BM Cocktail</h1>
   <%= simple_form_for @cocktail do |f| %>
     <%= f.input :name %>
+    <%= f.input :photo %>
+    <%= f.input :photo_cache, as: :hidden %>
     <%= f.submit %>
   <% end %>
 
