--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,15 +1,27 @@
 <div class="container">
-  <h1><%= @cocktail.name %></h1>
-    <ul class="list-group">
-      <% @cocktail.doses.each do |dose| %>
-        <li class="list-group-item">
-         <%= dose.ingredient.name %>: <%= dose.description %>
-          <%= link_to "delete", dose_path(dose),
-            method: :delete,
-            data: { confirm: "Are you sure?" } %>
-        </li>
+  <div class="d-flex justify-content-between row">
+    <div class="card-cocktail-infos col-lg-4 p-10 text-center">
+      <%= cl_image_tag @cocktail.photo, height: 300, width: 300, crop: :fill %>
+      <h1><%= @cocktail.name %></h1>
+        <ul class="list-group text-dark">
+          <% @cocktail.doses.each do |dose| %>
+            <li class="list-group-item">
+             <%= dose.ingredient.name %>: <%= dose.description %>
+              <%= link_to "delete", dose_path(dose),
+                method: :delete,
+                data: { confirm: "Are you sure?" } %>
+            </li>
+          <% end %>
+        </ul>
+    </div>
+    <div class="card-add-ingredients flex-grow-1">
+      <h2>Ajouter des ingredients</h2>
+      <%= simple_form_for [@cocktail, @dose] do |f| %>
+      <%= f.input :description %>
+      <%= f.association :ingredient %>
+      <%= f.submit %>
       <% end %>
-    </ul>
-  <p><%= link_to "+ add a dose", new_cocktail_dose_path(@cocktail) %></p>
+    </div>
+  </div>
   <p> <%= link_to "<< back to the list of cocktails", root_path %></p>
 </div>
