--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,11 +1,11 @@
 .footer {
-  background: #F4F4F4;
+  background: #23a6d5;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   height: 100px;
   padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  color: $white;
 }
 .footer-links {
   display: flex;
