--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -7,17 +7,11 @@
 </div>
 
 <div class="container">
-  <h1 class="text-center">Liste de tous les Bonjour Madame Cocktails</h1>
-  <div class="d-flex justify-content-space-between row">
+  <div class="cards">
     <% @cocktails.each do |cocktail| %>
-    <div class="card-index col-lg-4 col-md-4 col-sm-12">
-      <div class="card-body text-center p-10">
-        <h5 class="card-title"><%= link_to cocktail_path(cocktail) do %>
-        <%= cocktail.name %></li>
-          <%= cl_image_tag cocktail.photo, width: 150, crop: :fit %>
-        <% end %> </h5>
-        <%= link_to "Details", cocktail_path(cocktail), class: "btn btn-primary"%>
-      </div>
+    <div class="card-index" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path(cocktail.photo, :width=>400, :height=>400, :gravity=>"faces", :crop=>"fill") %>)">
+      <h2><%= cocktail.name %></h2>
+      <%= link_to "+ d'infos", cocktail_path(cocktail), class: "btn btn-primary"%>
     </div>
     <% end %>
   </div>
