--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -7,7 +7,7 @@
           <% @cocktail.doses.each do |dose| %>
             <li class="list-group-item">
              <%= dose.ingredient.name %>: <%= dose.description %>
-              <%= link_to "delete", dose_path(dose),
+              <%= link_to "supprimer", dose_path(dose),
                 method: :delete,
                 data: { confirm: "Are you sure?" } %>
             </li>
@@ -19,9 +19,9 @@
       <%= simple_form_for [@cocktail, @dose] do |f| %>
       <%= f.input :description %>
       <%= f.association :ingredient %>
-      <%= f.submit %>
+      <%= f.submit "Ajouter" %>
       <% end %>
     </div>
   </div>
-  <p> <%= link_to "<< back to the list of cocktails", root_path %></p>
+  <p> <%= link_to "<< retour à la page d'accueil", root_path %></p>
 </div>
