--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -9,10 +9,10 @@
 <div class="container">
   <div class="cards">
     <% @cocktails.each do |cocktail| %>
-    <div class="card-index" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path(cocktail.photo, :width=>400, :height=>400, :gravity=>"faces", :crop=>"fill") %>)">
-      <h2><%= cocktail.name %></h2>
-      <%= link_to "+ d'infos", cocktail_path(cocktail), class: "btn btn-primary"%>
-    </div>
+      <div class="card-index" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path(cocktail.photo, :width=>600, :height=>400, :crop=>"fill") %>)">
+        <h2><%= cocktail.name %></h2>
+        <%= link_to "+ d'infos", cocktail_path(cocktail), class: "btn btn-primary"%>
+      </div>
     <% end %>
   </div>
 </div>
