--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -9,7 +9,7 @@
 <div class="container">
   <div class="cards">
     <% @cocktails.each do |cocktail| %>
-      <div class="card-index" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path(cocktail.photo, :width=>600, :height=>400, :crop=>"fill") %>)">
+      <div class="card-index" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path(cocktail.photo, height: 300, width: 400, crop: :fill, gravity: "faces") %>)">
         <h2><%= cocktail.name %></h2>
         <%= link_to "+ d'infos", cocktail_path(cocktail), class: "btn btn-primary"%>
       </div>
